--- a/2020.11.19/11.19.md
+++ b/2020.11.19/11.19.md
@@ -71,8 +71,8 @@ if(action==LEFT){
 
 ```
 
-## 3.程序能做三件事
+## 3.程序能做的三件事
 
 - 做某件事
 - 在某个条件下做某件事（if....else）
-- 重复做某件事（for、while）
+- 重复做某件事（for、while循环）
